# Qwen3_4B_Anotation

./: .coverage  .gitignore  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
config/: base.yaml
contextforge-ai/: .env.example  .gitignore  Dockerfile  Makefile  README.md  TECHNICAL_REPORT.md  docker-compose.yml  requirements.txt
contextforge-ai/app/: __init__.py  config.py  main.py
contextforge-ai/app/api/: routes_annotation.py  routes_dataset.py  routes_evaluation.py  routes_experiments.py
contextforge-ai/app/core/: __init__.py  annotation_agent.py  annotation_pipeline.py  chunker.py  confidence_engine.py  dataset_loader.py  (+12 more)
contextforge-ai/dashboard/: streamlit_app.py
contextforge-ai/scripts/: build_submission.py  run_ablation.py  run_annotation.py  run_annotation_async.py  run_evaluation.py  run_worker.py
contextforge-ai/tests/: test_api.py  test_chunker.py  test_dataset_loader.py  test_db_and_utils.py  test_edge_cases.py  test_evaluator.py  test_exporter.py  test_job_queue.py  test_json_parsing.py  test_pipeline.py  test_prompt_builder.py  test_retrieval.py  test_submission_builder.py  test_vector_store.py
docker/: Dockerfile  docker-compose.yaml
docs/: GUIDE.md
scripts/: setup.sh
src/: main.py
src/agents/: __init__.py
src/annotation/: __init__.py
src/common/: __init__.py
src/evaluation/: __init__.py
src/ingestion/: __init__.py
src/optimization/: __init__.py
src/training/: __init__.py
src/ui/: routes.py
src/verification/: __init__.py
tests/integration/: test_ingestion.py
tests/unit/: test_core.py
(+37 files in other folders)
