[project]
name = "annotation-platform"
version = "1.0.0"
description = "Competition-grade Automatic Data Annotation Platform for Large Models"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "aiokafka>=0.12.0",
    "minio>=7.2.0",
    "torch>=2.5.0",
    "transformers>=4.46.0",
    "vllm>=0.7.0",
    "sentence-transformers>=3.3.0",
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    "pyarrow>=18.0.0",
    "lxml>=5.3.0",
    "pyyaml>=6.0.2",
    "jinja2>=3.1.4",
    "tenacity>=9.0.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "structlog>=24.4.0",
    "python-json-logger>=2.0.7",
    "prometheus-client>=0.21.0",
    "httpx>=0.28.0",
    "orjson>=3.10.12",
    "pydantic[email]>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "pre-commit>=4.1.0",
    "black>=24.10.0",
    "isort>=5.13.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]